Resolve merge conflicts.